# ApiMiniBank

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  docker-compose.yml  rustfmt.toml
migrations/: 20250831211404_create_users.sql  20250831212058_enum_types.sql  20250831212143_create_accounts.sql  20250831212210_create_transactions.sql  20250831212230_create_index.sql  20250904195917_update_user_table_timestampz.sql  20250906163905_table_refresh_token.sql
src/: lib.rs  main.rs
src/database/: mod.rs  refresh_token.rs  users.rs
src/handlers/: authentication.rs  mod.rs  users.rs
src/middleware/: authentication.rs
src/models/: account.rs  api_response.rs  auth_response.rs  claims.rs  mod.rs  pagination.rs  transaction.rs  user.rs
src/utils/: jwt.rs  mod.rs
src/validators/: mod.rs  user_validator.rs
templates/: index.html
