[package]
name = "ApiMiniBank"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
bcrypt = "0.17.1"
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
